Created auto updating app

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-builder build --win --publish never",
+    "deploy": "electron-builder build --win --publish always"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +15,9 @@
     "electron": "^18.0.4",
     "electron-builder": "^23.0.3",
     "electron-updater": "^5.0.1"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/Prabudh007/electron-demo.git"
   }
 }
